--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,8 +4,9 @@
   font-family: Verdana;
   font-size: 14px;
   font-weight: bold;
+  border-bottom: 2px solid black;
   margin: 30px;
-  border-bottom: solid 1 black;
+  height: 80px;
 }
 
 .logo {
@@ -13,7 +14,8 @@
   align-items: center;
   min-width: 300px;
   color: MediumAquamarine;
-  flex-grow: 0;
+  flex-grow: 1;
+  border: 1px solid black;
 }
 
 .logo p {
@@ -21,7 +23,7 @@
 }
 
 .NavContainer {
-  flex-grow: 1;
+  flex-grow: 0;
   text-align: right;
 }
 
@@ -32,4 +34,71 @@
 
 .nav a {
   color: black;
+}
+
+.column {
+  display: flex;
+  margin-left: 30px;
+  margin-right: 30px;
+  width: 1260px;
+  border: 1px solid;
+  justify-content: space-between;
+}
+
+.column .large {
+  border: 1px solid black;
+  width: 630px;
+  margin-top: 30px;
+}
+
+.large .tunasteak {
+  border: 1px solid black;
+}
+
+.large .OrcaBurger {
+  border: 1px solid black;
+}
+
+.OrcaBurger .orca {
+  border: 1px solid black;
+}
+
+.orca .earth {
+  border: 1px solid black;
+}
+
+.OrcaBurger .burger {
+  border: 1px solid black;
+}
+.burger .camera {
+  border: 1px solid black;
+}
+
+.column .medium {
+  border: 1px solid black;
+  width: 300px;
+  margin-top: 30px;
+}
+
+.medium .fbi {
+  border: 1px solid black;
+}
+
+.medium .mediumbottom {
+  border: 1px solid black;
+}
+
+.mediumbottom .cats {
+  border: 1px solid black;
+}
+
+.column .small {
+  border: 1px solid black;
+  width: 240px;
+  margin-top: 30px;
+  margin-right: 30px;
+}
+
+.small .bites {
+  border: 1px solid black;
 }
