--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -7,6 +7,7 @@
   border-bottom: 2px solid black;
   margin: 30px;
   height: 80px;
+  white-space: nowrap;
 }
 
 .logo {
@@ -15,7 +16,6 @@
   min-width: 300px;
   color: MediumAquamarine;
   flex-grow: 1;
-  border: 1px solid black;
 }
 
 .logo p {
@@ -36,69 +36,164 @@
   color: black;
 }
 
+.container {
+  display: flex;
+  justify-content: center;
+}
+
 .column {
   display: flex;
-  margin-left: 30px;
-  margin-right: 30px;
-  width: 1260px;
-  border: 1px solid;
+  min-width: 1260px;
   justify-content: space-between;
 }
 
 .column .large {
-  border: 1px solid black;
   width: 630px;
   margin-top: 30px;
 }
 
+.large {
+  font-family: Georgia;
+  font-size: 17px;
+  color: black;
+}
+
 .large .tunasteak {
-  border: 1px solid black;
+  display: flex;
+  background-image: url("../img-story-main.png");
+  height: 300px;
+  font-family: Georgia;
+  font-weight: bold;
+  font-size: 40px;
+  color: white;
+  text-align: center;
+  align-items: center;
 }
 
 .large .OrcaBurger {
-  border: 1px solid black;
+  display: flex;
+  font-family: Georgia;
+  font-size: 17px;
+  color: black;
 }
 
 .OrcaBurger .orca {
-  border: 1px solid black;
+  margin-right: 15px;
+}
+
+.orca h2 {
+  font-size: 25px;
 }
 
 .orca .earth {
-  border: 1px solid black;
+  display: flex;
+  background-image: url("../img-story-2.png");
+  height: 300px;
+  font-family: Georgia;
+  font-weight: bold;
+  font-size: 30px;
+  color: white;
+  text-align: center;
+  margin-top: 30px;
+  align-items: center;
 }
 
 .OrcaBurger .burger {
-  border: 1px solid black;
+  margin-left: 15px;
 }
+
+.burger h2 {
+  font-size: 25px;
+}
+
 .burger .camera {
-  border: 1px solid black;
+  display: flex;
+  background-image: url("../img-story-3.png");
+  height: 300px;
+  font-family: Georgia;
+  font-weight: bold;
+  font-size: 30px;
+  color: white;
+  text-align: center;
+  margin-top: 30px;
+  align-items: center;
 }
 
 .column .medium {
-  border: 1px solid black;
   width: 300px;
   margin-top: 30px;
+  font-family: Georgia;
+  font-size: 17px;
+  color: black;
 }
 
 .medium .fbi {
-  border: 1px solid black;
 }
 
 .medium .mediumbottom {
-  border: 1px solid black;
 }
 
 .mediumbottom .cats {
-  border: 1px solid black;
+  display: flex;
+  background-image: url("../img-story-1.png");
+  height: 299px;
+  font-family: Georgia;
+  font-weight: bold;
+  font-size: 30px;
+  color: white;
+  text-align: center;
+  align-items: center;
 }
 
 .column .small {
-  border: 1px solid black;
   width: 240px;
   margin-top: 30px;
   margin-right: 30px;
+  font-family: Georgia;
+  font-size: 17px;
+  color: black;
 }
 
-.small .bites {
-  border: 1px solid black;
+.bites h3{
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.news{
+  flex-direction: column;
+  background-color: WhiteSmoke;
+  font-family: Verdana;
+  font-size: 12px;
+  color: DimGray;
+  border-bottom: 1px solid black;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 15px;
+}
+
+.footer {
+  background-color: MediumAquamarine;
+  margin-top: 50px;;
+  font-family: Verdana;
+  font-size: 14px;
+  padding: 75px;
+}
+
+.FooterNav {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.copyright {
+  text-align: center;
+  font-size: 12px;
+}
+
+.FooterNav p{
+  font-family: Georgia;
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+  padding-right: 10px;
 }
